--- a/site-src/_sass/_tables.scss
+++ b/site-src/_sass/_tables.scss
@@ -8,6 +8,8 @@
 }
 
 .active-filter-list {
+  display: flex;
+  flex-wrap: wrap;
   gap: 0.4rem 0.9rem;
 }
 
@@ -225,11 +227,6 @@
 }
 
 @media (max-width: 700px) {
-  .problem-toolbar {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-
   .problem-table--matrix {
     min-width: 58rem;
     table-layout: auto;
